--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#number {
+  margin: 5px;
+  padding: 5px;
+}
+
+#currencyList {
+  padding: 5px;
+}
+
+button {
+  margin: 10px 0px;
+  padding: 10px 20px;
+}
+
+table {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+thead {
+  background-color: rgb(255, 198, 92);
+  border-collapse: collapse;
+}
+
+th {
+  padding: 10px;
+  border-right: 1px solid black;
+}
+td {
+  padding: 5px 10px;
+  border-right: 1px solid grey;
+}
+
+#conversion{
+  background-color: rgb(252, 213, 142);
 }
